[tool.poetry]
name = "switcheroo"
version = "0.1.0"
description = "Efficient dispatch-based calling, that might be a switch statement in another language."
authors = ["Chris Withers <chris@withers.org>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "~2.7 || ^3.6"
six = "^1.11"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
sybil = "^1.0"
testfixtures = "^6.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
