[tool.poetry]
name = "switcheroo"
version = "1.1.0"
description = "Efficient dispatch-based calling, that might be a switch statement in another language."
authors = ["Chris Withers <chris@withers.org>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/cjw296/switcheroo"

[tool.poetry.dependencies]
python = "~2.7 || ^3.6"
six = "^1.11"

[tool.poetry.dev-dependencies]
pytest = "^3.0"
pytest-cov = "^2.6"
sybil = "^1.0"
testfixtures = "^6.3"

[tool.carthorse]
version-from = "poetry"
when = [
  "version-not-tagged"
]
actions = [
   { run="poetry publish --username chrisw --password $POETRY_PASS --build"},
   { name="create-tag"},
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
