[tool.poetry]
name = "switcheroo"
version = "2.0.0"
description = "Efficient dispatch-based calling, that might be a switch statement in another language."
authors = ["Chris Withers <chris@withers.org>"]
license = "MIT"
readme = "README.rst"
repository = "https://github.com/simplistix/switcheroo"

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
sybil = "*"
testfixtures = "*"

[tool.carthorse]
version-from = "poetry"
when = [
  "version-not-tagged"
]
actions = [
   { run="poetry publish --build"},
   { name="create-tag"},
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
